--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@ a {
 .social-item:hover{
   background-color: var(--accent-color-text);
 }
-.clie
 .header{
   border-bottom: 1px; 
 }
@@ -170,7 +169,7 @@ a {
 }
 .current {
   color: var(--accent-color-text);
-  text-decoration: none;
+  text-decoration: underline;
 }
 .contacts-link {
   text-decoration: none;
@@ -246,42 +245,26 @@ a {
   flex-wrap: wrap;
   margin-bottom: -30px;
   margin-right: -30px;
+  width: 1200px;
 }
 .images-portfolio{
   margin-bottom: 30px;
   flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   position: relative;
-  overflow: hidden;
 }
 .images-portfolio:focus,
 .images-portfolio:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.portfolio-thumb{
-  display: flex;
-  content: "";
-  width: 370px;
-  height: 294px;
-  position: absolute;
-  background: rgba(33, 150, 243, 0.9);
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  transform: translateY(-100%);
-
+.portfolio-thumb-one{
+  overflow: hidden;
 }
-/* .portfolio-thumb::before{
+.portfolio-thumb::after{
+  position: absolute;
   display: flex;
   content: "";
+  top: 0;
   width: 370px;
   height: 294px;
   position: absolute;
@@ -296,40 +279,43 @@ a {
   text-align: center;
   align-items: center;
   justify-content: center;
-  transform: translateY(-100%);
-  transition: transform 250ms ease;
+  transform: translateY(100%);
+  transform: rotateZ(20%);
+  transition: transform 250ms cubic-bezier(0.4,0,0.2,1);
   opacity: 0;
-} */
-/* .portfolio-thumb:hover::before{
-  opacity: 1;
 }
-.portfolio-thumb-one::before{
+.portfolio-thumb:hover::after{
+  opacity: 1;
+  transform: translateY(0);
+}
+.portfolio-thumb-one::after{
+  
   content: "Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.";
 }
-.portfolio-thumb-two::before{
+.portfolio-thumb-two::after{
   content: "Новостной портал";
 }
-.portfolio-thumb-three::before{
+.portfolio-thumb-three::after{
   content: "Приложение для ресторана";
 }
-.portfolio-thumb-four::before{
+.portfolio-thumb-four::after{
   content: "Бренды";
 }
-.portfolio-thumb-five::before{
+.portfolio-thumb-five::after{
   content: "Приложения";
 }
-.portfolio-thumb-six::before{
+.portfolio-thumb-six::after{
   content: "Веб-сйты";
 }
-.portfolio-thumb-seven::before{
+.portfolio-thumb-seven::after{
   content: "Новости";
 }
-.portfolio-thumb-eight::before{
+.portfolio-thumb-eight::after{
   content: "Проекты";
 }
-.portfolio-thumb-nine::before{
+.portfolio-thumb-nine::after{
   content: "Бизнес";
-} */
+}
 .img-tittle {
   color: var(--tittle-text-color);
   font-weight: 700;
@@ -450,7 +436,7 @@ a {
   height: 92px;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 .client-list-block:hover{
   border-color: var(--accent-color-text);
@@ -528,6 +514,7 @@ a {
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
   box-sizing: border-box;
+  
 }
 .address{
   margin-top: 20px;
@@ -558,4 +545,41 @@ a {
   justify-content:center ;
   align-items: center;
   margin-bottom: 20px;
+}
+.backdrop{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(15, 12, 12, 0.5);
+}
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+}
+.modal{
+  height: 500px;
+  width: 600px;
+  background-color: #fff;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform:translate(-50%,-50%);
+  position: relative;
+
+}
+.close-menu{
+  position: absolute;
+  padding: 0px;
+  margin: 0px;
+  min-height: 20px;
+  min-height: 30px;
+  justify-content: center;
+  align-items: center;
+  color: var(--accent-color-text);
+  background-color: var(--description-text-color);
+  border: none;
+  top:0px;
+  right: 0px;
 }
