--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ a {
   flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   position: relative;
+  overflow: hidden;
 }
 .images-portfolio:focus,
 .images-portfolio:hover{
