--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,15 @@ a {
 }
 .current {
   color: var(--accent-color-text);
+  
+}
+.current::after{
   text-decoration: underline;
+  content: "";
+  background-color: #2196f3;
+  width: 100%;
+  height: 3px;
+  display: flex;
 }
 .contacts-link {
   text-decoration: none;
