--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ a {
   border-radius: 4px;
   background-color: #f5f4fa;
   padding: 6px 22px 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-list{
   margin-bottom: 50px;
@@ -404,6 +405,7 @@ a {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-googlelink:hover,
 .footer-googlelink:focus {
@@ -415,6 +417,7 @@ a {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-item:not(:last-child){
   margin-bottom: 9px;
