--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,8 @@ a {
   align-items: center;
   border-radius: 50%;
   color:#AFB1B8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .social-link:hover,
 .social-link:focus{
@@ -145,14 +146,16 @@ a {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-social-icon{
-  background: rgba(255, 255, 255, 0.1);
+  font: inherit;
+  display: inline-block;
   
 }
+
+.footer-social-icon{
+  background: rgba(255, 255, 255, 0.1);
+}
 .social-item:not(:last-child){
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .social-icon{
   width: 20px;
@@ -161,9 +164,6 @@ a {
 }
 .footer-icon{
   fill: #fff;
-}
-.social-item:hover{
-  background-color: var(--accent-color-text);
 }
 .nav-logo {
   color: #2196f3;
@@ -280,7 +280,7 @@ a {
   border-radius: 4px;
   background-color: #f5f4fa;
   padding: 6px 22px 6px 22px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-list{
   margin-bottom: 50px;
@@ -314,8 +314,9 @@ a {
 .images-portfolio:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.portfolio-thumb-one{
+.portfolio-thumb{
   overflow: hidden;
+  position: inherit;
 }
 .portfolio-thumb::after{
   position: absolute;
@@ -336,10 +337,8 @@ a {
   text-align: center;
   align-items: center;
   justify-content: center;
-  transform: translateY(100%);
-  transform: rotateZ(20%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4,0,0.2,1);
-  opacity: 0;
 }
 .portfolio-thumb:hover::after{
   opacity: 1;
@@ -497,7 +496,7 @@ a {
   justify-content: center;
   align-items: center;
   color: #AFB1B8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus{
@@ -630,24 +629,25 @@ a {
   left: 0;
   right: 0;
   background-color: rgba(15, 12, 12, 0.5);
+  transition:  250ms cubic-bezier(0.4,0,0.2,1);
 }
 .backdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
 }
 .modal{
-  height: 500px;
-  width: 600px;
+  width: 528px;
+  height: 581px;
   background-color: #fff;
   position: absolute;
   left: 50%;
   top: 50%;
   transform:translate(-50%,-50%);
-  position: relative;
-
+  position: absolute;
 }
 .close-menu{
   position: absolute;
+  display: flex;
   padding: 0px;
   margin: 0px;
   min-height: 20px;
@@ -659,4 +659,18 @@ a {
   border: none;
   top:0px;
   right: 0px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 8px;
+  margin-right: 8px;
+  cursor: pointer;
+}
+.icon-close-form{
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
